# e2020-data-viewer

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  Makefile.toml  README.md  build.rs
.github/workflows/: cd.yml  ci.yml  release-plz.yml
src/: action.rs  components.rs  data.rs  main.rs  runner.rs  tui.rs  utils.rs
src/components/: app.rs  help.rs  picker.rs  select.rs  summary.rs  viewer.rs
