[package]
name = "e2020-data-viewer"
version = "0.1.0"
edition = "2021"
authors = ["Dheepak Krishnamurthy"]
build = "build.rs"
repository = "https://github.com/ECCC-RPE-EPR/e2020-data-viewer"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = { version = "0.26.3" }
crossterm = { version = "0.27.0", features = ["event-stream", "serde"] }
tokio = { version = "1.33.0", features = ["full"] }
tokio-stream = "0.1.15"
uuid = "1.8.0"
unicode-segmentation = "1.11.0"
lazy_static = "1.4.0"
better-panic = "0.3.0"
chrono = "0.4.38"
clap = { version = "4.4.18", features = [
  "derive",
  "cargo",
  "wrap_help",
  "unicode",
  "string",
  "unstable-styles",
] }
dirs = "5.0.1"
versions = "6.2.0"
regex = "1.10.4"
serde = "1.0.193"
serde_json = "1.0.109"
unicode-width = "0.1.12"
unicode-truncate = "1.0.0"
shellexpand = "3.1.0"
shlex = "1.3.0"
rand = "0.8.5"
futures = "0.3.30"
itertools = "0.13.0"
hdf5 = { version = "0.8.1" }
hdf5-sys = { version = "0.8.1", features = ["zlib", "static"] }
ndarray = "0.15.6"
tui-input = "0.8.0"
tracing = "0.1.40"
colored = "2.1.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
directories = "5.0.1"
log = "0.4.21"
approx = "0.5.1"
env_logger = "0.11.3"
tracing-macros = "0.0.0"
libc = "0.2.155"
cassowary = "0.3.0"
signal-hook = "0.3.17"
color-eyre = { version = "0.6.3", features = ["issue-url"] }
strip-ansi-escapes = "0.2.0"
tokio-util = "0.7.11"
serde_derive = "1.0.188"
tracing-error = "0.2.0"
human-panic = "2.0.0"

[profile.release]
codegen-units = 1
strip = true
debug = 1
incremental = true
lto = "off"

[[bin]]
name = "e2020-data-viewer"
path = "src/main.rs"

[build-dependencies]
vergen = { version = "8.3.1", features = [ "build", "git", "git2", "cargo" ]}

